[package]
name = "pion"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.aarch64-unknown-none]
linker = "aarch64-none-elf-ld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#concat-idents = "1.1.3"
paste = "1.0.6"
